fix tab spacing

--- a/app/pub/main.styl
+++ b/app/pub/main.styl
@@ -32,7 +32,9 @@ user-select()
 	user-select: none
 
 .view-switcher.tab:after
-	content: '|'	
+	content: '|'
+	margin-left: 5px
+	margin-right: 5px
 
 .view-switcher.tab:last-child:after
 	content: ''
